@@ -1,3 +1,8 @@
+2004-03-14  Saito <saito@intaa.net>
+
+	* timidity/readmidi.c, timidity/reverb.[ch]:
+	  Support for effect: Auto Wah (incomplete).
+
 2004-03-13  Saito <saito@intaa.net>
 
 	* timidity/reverb.[ch]:
